--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
         </section>
         <!--Section3-->
-        <section class="scils__page">
+        <section class="scils">
             <div class="container">
                 <h2 class="scils__title title">Чем мы занимаемся</h2>
                 <ul class="scils__img">
@@ -113,7 +113,7 @@
         <section class="team">
             <div class="container">
                 <h2 class="team__title title">Наша команда</h2>
-                <ul class="team list">
+                <ul class="team__list list">
                     <li class="team__item">
                         <img class="team__photo" src="./images/img7.jpg" alt="Product Designer" width="270">
                         <div class="team__box">
