--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
         <section class="portfolio">
             <div class="container">
                 <h1 hidden>Портфолио</h1>
-                <div class="main__section">
+                <div class="filter">
                     <ul class="filter__list list">
                         <li class="filter__item"><button class="filter__button current" type="button">Все</button></li>
                         <li class="filter__item"><button class="filter__button" type="button">Веб-сайты</button></li>
@@ -58,7 +58,7 @@
                     </ul>
                 </div>
                 <!--Фильтр портфолио=============-->
-                <div class="works__box">
+                <div class="works">
                     <ul class="works__cards-list">
                         <li class="works__item">
                             <a href="" class="works__link">
