--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!--Header-->
     <header class="header">
-        <div class="container main-nav">
+        <div class="main-nav container">
             <nav class="nav">
                 <a class="nav__logo logo" href="./index.html">Web<span class="nav__logo--blue">Studio</span></a>
                 <ul class="nav list">
