--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                                 <a class="agreement__link" href="">Условия договора</a></span>
                         </label>
                     </div>
-                        <button class="form__button" type="submit">Отправить</button>
+                        <button class="form__button button" type="submit">Отправить</button>
                  </form>
             </div>
         </div>
