--- a/portfolio.html
+++ b/portfolio.html
@@ -50,11 +50,11 @@
                 <h1 hidden>Портфолио</h1>
                 <div class="filter">
                     <ul class="filter__list list">
-                        <li class="filter__item"><button class="filter__button current" type="button">Все</button></li>
-                        <li class="filter__item"><button class="filter__button" type="button">Веб-сайты</button></li>
-                        <li class="filter__item"><button class="filter__button" type="button">Приложения</button></li>
-                        <li class="filter__item"><button class="filter__button" type="button">Дизайн</button></li>
-                        <li class="filter__item"><button class="filter__button" type="button">Маркетинг</button></li>
+                        <li class="filter__item"><button class="filter__button button current" type="button">Все</button></li>
+                        <li class="filter__item"><button class="filter__button button" type="button">Веб-сайты</button></li>
+                        <li class="filter__item"><button class="filter__button button" type="button">Приложения</button></li>
+                        <li class="filter__item"><button class="filter__button button" type="button">Дизайн</button></li>
+                        <li class="filter__item"><button class="filter__button button" type="button">Маркетинг</button></li>
                     </ul>
                 </div>
                 <!--Фильтр портфолио=============-->
